--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,13 @@ body{
 }
 #main{ width:100%;}
 
-.card{margin: 0 .5em;}
-
 #header{
     position: fixed;
     width: 100%;
     left: 0;
     top: 0;
     z-index: 999;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.02);
 	/*background-color: rgba(49, 75, 114, 0.1);*/
 	padding: 0.5rem 0;
 }
@@ -41,6 +39,8 @@ body{
 	background-color: #314b72;
     border: 1px solid #99b4bf;
 }
+
+/* Slider backround-color: #071C55 */
 
 .btn-primary, .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active{
 	background-color: #2e4b73;
@@ -70,6 +70,7 @@ body{
 #destinations .heart .bi-heart-fill{
 	color: red;
 }
+
 #destinations .heart span{
 	font-size: 14px;
 }
@@ -83,6 +84,45 @@ body{
 	-webkit-box-shadow: 0px 2px 30px -15px rgba(0,0,0,0.11);
 	-moz-box-shadow: 0px 2px 30px -15px rgba(0,0,0,0.11);
 	box-shadow: 0px 2px 30px -15px rgba(0,0,0,0.11);
+	margin: 0 .5em;
+}
+
+#destinations .card:hover:after{
+    visibility: visible;
+    opacity: 1;
+    right: auto;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+}
+
+#destinations .card .thumb:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: #d9b70d;
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
+    -o-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+    z-index: 0;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#destinations .card .thumb{
+    position: relative;
+    background: #d9b70d;
+    overflow: hidden;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
 }
 
 footer{
@@ -103,6 +143,21 @@ footer .nav-link{color: #99b4bf;}
     display: none;
 }
 
+
+/* Page Roteiro*/
+
+.btn-secondary{
+	background-color: #e3e3e3;
+	border: 1px solid #e3e3e3;
+	color: #333;
+}
+#comment-area #comment-form{
+	background-color: #FFF;
+	padding: 25px;
+}
+
+#comment-area .bi-star-fill{color: #dddddd;}
+#comment-area .bi-star-fill.color{color: #f3941e;}
 
 @media (max-width: 575.98px){
 	#main{margin-top: 72px;}
